--- a/xebia-ios/View/GHRepositoryCell.xib
+++ b/xebia-ios/View/GHRepositoryCell.xib
@@ -12,9 +12,9 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
-			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBUITableViewCell</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -42,8 +42,8 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUILabel" id="894365236">
 								<reference key="NSNextResponder" ref="840849820"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{66, 7}, {232, 16}}</string>
+								<int key="NSvFlags">290</int>
+								<string key="NSFrame">{{66, 5}, {232, 16}}</string>
 								<reference key="NSSuperview" ref="840849820"/>
 								<reference key="NSNextKeyView" ref="891147559"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -75,10 +75,10 @@
 							</object>
 							<object class="IBUILabel" id="891147559">
 								<reference key="NSNextResponder" ref="840849820"/>
-								<int key="NSvFlags">272</int>
-								<string key="NSFrame">{{66, 22}, {232, 16}}</string>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrame">{{66, 20}, {232, 18}}</string>
 								<reference key="NSSuperview" ref="840849820"/>
-								<reference key="NSNextKeyView" ref="803944079"/>
+								<reference key="NSNextKeyView" ref="591700337"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -106,18 +106,13 @@
 								</object>
 								<double key="preferredMaxLayoutWidth">232</double>
 							</object>
-							<object class="IBUIImageView" id="803944079">
+							<object class="IBUIView" id="591700337">
 								<reference key="NSNextResponder" ref="840849820"/>
-								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{0, 59}, {320, 5}}</string>
+								<int key="NSvFlags">266</int>
+								<string key="NSFrame">{{8, 58}, {304, 5}}</string>
 								<reference key="NSSuperview" ref="840849820"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">dashed-separator.png</string>
-								</object>
 							</object>
 						</array>
 						<string key="NSFrameSize">{300, 63}</string>
@@ -143,7 +138,7 @@
 				<int key="IBUIAccessoryType">1</int>
 				<reference key="IBUIContentView" ref="840849820"/>
 				<string key="IBUIReuseIdentifier">GHRepository</string>
-				<real value="46" key="IBUIRowHeight"/>
+				<real value="64" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -163,6 +158,14 @@
 						<reference key="destination" ref="891147559"/>
 					</object>
 					<int key="connectionID">14</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">dashedSeparatorView</string>
+						<reference key="source" ref="506599320"/>
+						<reference key="destination" ref="591700337"/>
+					</object>
+					<int key="connectionID">18</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -189,8 +192,8 @@
 						<reference key="object" ref="506599320"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="894365236"/>
-							<reference ref="803944079"/>
 							<reference ref="891147559"/>
+							<reference ref="591700337"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -205,8 +208,8 @@
 						<reference key="parent" ref="506599320"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="803944079"/>
+						<int key="objectID">17</int>
+						<reference key="object" ref="591700337"/>
 						<reference key="parent" ref="506599320"/>
 					</object>
 				</array>
@@ -217,7 +220,7 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.CustomClassName">GHRepositoryCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -226,7 +229,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">15</int>
+			<int key="maxID">18</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
@@ -237,10 +240,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">dashed-separator.png</string>
-			<string key="NS.object.0">{320, 5}</string>
-		</object>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
